2024-10-01T01:50:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11117158883 # 435
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-01
* notice: last 14d: unq all: 3 1714
* notice: prev accum: outdated-unq outdated-all / unq all: 2236 226053 / 2252 227844
* notice: next accum: outdated-unq outdated-all / unq all: 2237 226181 / 2253 227970
* notice: prev exec diff / last date diff / accum: unq all: +1 +126 -0 -75 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-09-16] / [2024-09-17 2024-09-30]

2024-09-30T01:44:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097906609 # 434
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-30
* notice: last 14d: unq all: 3 1716
* notice: prev accum: outdated-unq outdated-all / unq all: 2233 225945 / 2251 227717
* notice: next accum: outdated-unq outdated-all / unq all: 2236 226053 / 2252 227844
* notice: prev exec diff / last date diff / accum: unq all: +1 +127 -0 -75 / +1 +127 -0 -0 / 1 127
* notice: removed / changed dates: [2024-09-15] / [2024-09-16 2024-09-29]

2024-09-29T01:48:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11088697305 # 433
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
* notice: last 14d: unq all: 5 1708
* notice: prev accum: outdated-unq outdated-all / unq all: 2231 225816 / 2249 227588
* notice: next accum: outdated-unq outdated-all / unq all: 2233 225945 / 2251 227717
* notice: prev exec diff / last date diff / accum: unq all: +2 +129 -0 -64 / +2 +129 -0 -0 / 2 129
* notice: removed / changed dates: [2024-09-14] / [2024-09-15 2024-09-28]

2024-09-28T01:40:48Z: