@@ -1,15 +1,10 @@
 {
-  "count": 1714,
+  "count": 1711,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-09-17T00:00:00Z",
-      "count": 54,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-09-18T00:00:00Z",
-      "count": 128,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-09-30T00:00:00Z",
+      "count": 126,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-01T00:00:00Z",
       "count": 126,
       "uniques": 1
     }
