@@ -1,3 +1,12 @@
+2024-10-02T01:41:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11136365716 # 436
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-02
+* notice: last 14d: unq all: 3 1711
+* notice: prev accum: outdated-unq outdated-all / unq all: 2237 226181 / 2253 227970
+* notice: next accum: outdated-unq outdated-all / unq all: 2238 226310 / 2254 228096
+* notice: prev exec diff / last date diff / accum: unq all: +1 +126 -0 -75 / +1 +126 -0 -0 / 1 126
+* notice: removed / changed dates: [2024-09-17] / [2024-09-18 2024-10-01]
+
 2024-10-01T01:50:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11117158883 # 435
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-01
